# MyoSC

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README_VN.md
myosc/: __init__.py  cli.py
myosc/core/: __init__.py  exceptions.py  models.py  registry.py  scanner.py
myosc/db/: __init__.py  epss.py  myoapi.py  osv.py
myosc/formatters/: __init__.py  base.py  json_fmt.py  sarif.py  table.py
myosc/scanners/: __init__.py  image_scanner.py  package_parsers.py  secret_patterns.py  secret_scanner.py  vuln_scanner.py
tests/: debug_osv.py  test_models.py  test_package_parsers.py  test_secret_scanner.py
tests/fixtures/: requirements.txt
